--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,4 +41,13 @@
             app:layout_constraintTop_toBottomOf="@id/edit"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
+
+    <com.banzhi.repeat.widget.BannerView android:layout_width="match_parent"
+                                         android:id="@+id/bannerView"
+                                         android:background="@color/colorAccent"
+                                         app:layout_constraintTop_toBottomOf="@id/btn"
+                                         app:layout_constraintLeft_toLeftOf="parent"
+                                         app:layout_constraintBottom_toBottomOf="parent"
+                                         app:layout_constraintRight_toRightOf="parent"
+                                         android:layout_height="wrap_content"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
