--- a/app/src/main/res/layout/item_sample.xml
+++ b/app/src/main/res/layout/item_sample.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:background="@color/colorPrimary"
-              android:layout_width="wrap_content"
+              android:layout_width="match_parent"
               android:layout_margin="5dp"
               android:gravity="center"
+              android:layout_gravity="center_horizontal"
               android:paddingLeft="5dp"
               android:layout_height="wrap_content">
     <TextView android:layout_width="1dp" android:layout_height="match_parent"
