--- a/app/src/main/res/layout/item_sample.xml
+++ b/app/src/main/res/layout/item_sample.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:background="@color/colorPrimary"
-              android:layout_width="match_parent"
-              android:layout_margin="5dp"
-              android:gravity="center"
-              android:layout_gravity="center_horizontal"
-              android:paddingLeft="5dp"
-              android:layout_height="wrap_content">
-    <TextView android:layout_width="1dp" android:layout_height="match_parent"
-              android:background="@android:color/holo_orange_dark"/>
+        android:orientation="horizontal"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_margin="5dp"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:paddingLeft="5dp"
+        android:layout_height="wrap_content">
+
+    <TextView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/holo_orange_dark" />
+
     <LinearLayout
             android:orientation="vertical"
             android:background="@color/colorPrimary"
             android:layout_width="wrap_content"
             android:gravity="center"
             android:layout_height="wrap_content">
-        <ImageView android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:src="@mipmap/ic_launcher"
-                   android:id="@+id/imageView"/>
 
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:gravity="left"
-                  android:textColor="@color/colorAccent"
-                  android:id="@+id/textView"/>
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_launcher"
+                android:id="@+id/imageView" />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:textColor="@color/colorAccent"
+                android:id="@+id/textView" />
     </LinearLayout>
 </LinearLayout>
